--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">HotelsNights</string>
+    <string name="text_search">Search</string>
+    <string name="text_location">Locations</string>
+    <string name="text_filter">Filter</string>
 </resources>
